--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <h2 class="logo">W.</h2>
       <nav class="navigation">
-        <a href="#">Home</a>
+        <a href="#" class="btnhome">Home</a>
         <a href="#">Story</a>
         <a href="#">Gallery</a>
         <a href="#" class="btnlogin">Login</a>
@@ -26,7 +26,7 @@
       <span class="icon-close"><ion-icon name="close"></ion-icon></span>
       <div class="form-boxlogin">
         <h2>Login</h2>
-        <form class="formlogin" action="#">
+        <form class="formlogin" id="formlogin" action="#">
           <div class="input-box">
             <span class="icon"><ion-icon name="mail"></ion-icon></span>
             <input
@@ -53,7 +53,9 @@
             <label><input type="checkbox" /> Remember me</label>
             <a href="#">Forgot password?</a>
           </div>
-          <button type="submit" class="btn">Login</button>
+          <button type="submit" value="submit" class="btn" id="btn1">
+            Login
+          </button>
           <div class="login-register">
             <p>
               Don't have an account?<a href="#" class="register-link"
@@ -105,7 +107,15 @@
               ><input type="checkbox" />Agree to terms and conditions</label
             >
           </div>
-          <button type="submit" class="btn">Register</button>
+          <button
+            type="submit"
+            value="submit"
+            class="btn"
+            id="btn"
+            onclick="Submit()"
+          >
+            Register
+          </button>
           <div class="login-register">
             <p>
               Already have an account?<a href="#" class="login-link">Login</a>
@@ -115,9 +125,28 @@
       </div>
     </div>
 
-    <div class="image"><img src="image2.png" alt="" /></div>
+    <div class="wrapper1">
+      <div class="image"><img src="image2.png" alt="" /></div>
+
+      <div id="msg" class="msg"></div>
+      <fieldset>
+        <legend>
+          <h2>Data from Local Storage</h2>
+        </legend>
+
+        <table border="2" id="table" class="table">
+          <tr>
+            <td class="col">Username</td>
+            <td class="col">Email</td>
+            <td class="col">Password</td>
+            <td class="col">Action</td>
+          </tr>
+        </table>
+      </fieldset>
+    </div>
 
     <script src="script.js"></script>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
