add clear button

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           >
             Register
           </button>
+          <button type="reset" value="reset" class="btn" id="btn">Clear</button>
           <div class="login-register">
             <p>
               Already have an account?<a href="#" class="login-link">Login</a>
