--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <button type="submit" value="submit" class="btn" id="btn1">
             Login
           </button>
+          <button type="reset" value="reset" class="btn" id="btn">Clear</button>
           <div class="login-register">
             <p>
               Don't have an account?<a href="#" class="register-link"
