--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
 
     <div class="wrapper">
       <span class="icon-close"><ion-icon name="close"></ion-icon></span>
-      <div
-        class="form-boxlogin"
-        id="form-boxlogin"
-        action="/table"
-        method="POST"
-      >
+      <div class="form-boxlogin" id="form-boxlogin">
         <h2>Login</h2>
         <form class="formlogin" id="formlogin" action="#">
           <div class="input-box">
