--- a/table.html
+++ b/table.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body onload="showData()">
@@ -12,13 +13,11 @@
       <form class="formadd" id="formadd" action="#">
         <div class="input-box">
           <span class="icon"><ion-icon name="mail"></ion-icon></span>
-          <input type="email" required id="ae" />
-          <label>Email</label>
+          <input type="email" required id="ae" placeholder="email" />
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-          <input type="text" required id="an" />
-          <label>Name</label>
+          <input type="text" required id="an" placeholder="name" />
         </div>
         <button class="btn" onclick="add()">Add</button>
         <button type="reset" value="reset" class="btn" id="btn">Clear</button>
@@ -38,5 +37,13 @@
       </table>
     </div>
     <script src="table.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
