--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <h2 class="logo">W.</h2>
       <nav class="navigation">
-        <a href="/table.html">Home</a>
+        <a href="#">Home</a>
         <a href="#">Story</a>
         <a href="#">Gallery</a>
         <a href="#" class="btnlogin">Login</a>
